# Web-scraper

./: .gitignore  PRD.md  job-scraper-pre-file.md  progress.txt  pyproject.toml  requirements.txt
job_scraper/: cli.py  config.py  logging_config.py  robots.py  runner.py
job_scraper/db/: crud.py  models.py
job_scraper/dedup/: deduplicator.py
job_scraper/export/: csv_export.py  json_export.py
job_scraper/filters/: keyword_filter.py  llm_filter.py  pipeline.py
job_scraper/scrapers/: base.py  exceptions.py  jobup.py  linkedin.py
job_scraper/scrapers/career_pages/: abb.py  alpiq.py  cern.py  hitachi.py  location.py  sicpa.py
tests/: test_career_pages.py  test_cli.py  test_config.py  test_db.py  test_dedup.py  test_export.py  test_filters.py  test_integration.py  test_jobup.py  test_linkedin.py  test_logging.py  test_scraper_base.py
