[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scraper"
version = "0.1.0"
description = "Web scraper for entry-level engineering positions in French-speaking Switzerland"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "feedparser",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["job_scraper*"]

[project.scripts]
job-scraper = "job_scraper.cli:_entry"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["job_scraper"]

[tool.coverage.report]
show_missing = true
fail_under = 80
